# peelback

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
examples/: README.md  nested_token_demo.py  sample-tokens.txt
scripts/: smoke.sh
src/peelback/: __init__.py  __main__.py  cli.py  compression.py  detectors.py  engine.py  errors.py  heuristics.py  jwtlayer.py  model.py  render.py
tests/: conftest.py  test_cli.py  test_detect_compression.py  test_detect_jwt.py  test_detect_text_codecs.py  test_engine.py  test_heuristics.py  test_model.py  test_render.py  tokens.py
